# fairhub-api

./: .env.example  .flake8  .gitignore  .pylint.ini  Dockerfile  README.md  alembic.ini  app.py  cache-docker-compose.yaml  caching.py  config.py  coolify-prod-docker-compose.yaml  db-docker-compose.yaml  db-docker-compose.yml  dev-docker-compose.yaml  entrypoint.sh  etl-test.py  package.json  prod-docker-compose.yaml  pyproject.toml  pytest-config.py  pytest_config.py  requirements.txt
.github/workflows/: build-and-deploy-to-main.yml  build-and-deploy-to-staging.yml  build-staging.yml  ci.yml  deploy-app-to-main-slot.yml  deploy-app-to-staging-slot.yml  lint.yml  main_api-fairhub-io(main).yml  staging-build-and-deploy.yml  staging_api-fairhub-io(staging) copy.yml  staging_api-fairhub-io(staging).yml  test.yml
alembic/: README.md  env.py
alembic/versions/: 0defbfc71c59_add_identifier_to_version.py  29e42ce4be3f_adding_license_text.py  31703d707dfb_contributor_name_change.py  32e5ff331a78_add_token_blacklist.py  3ffefbd9c03b_email_verified_type.py  6173282aef08_remove_invite_info.py  639a13561089_delete_token_blacklist.py  6d4271d33834_remove_column_in_token_blacklist.py  6ebae7169083_add_column_in_token_blacklist.py  72ac2b020c7c_delete_dataset_readme_table.py  95d6e53e2578_edit_invite_table_pk.py  9698369d7a8c_create_session_table.py  b20e07d8924f_delete_token_fron_user_table.py  db1b62d02def_edit_invite_table.py  e6cc254fc968_token_blacklist.py  eee9610b2cdc_role_nullable_and_fk_user_id.py  f150341d2741_modify_email_verification.py  f189827ee101_user_table_email_verfication.py  fed13d793eff_email_verified_type.py
alembic/versions_backup/: 6173282aef08_remove_invite_info.py  72ac2b020c7c_delete_dataset_readme_table.py  95d6e53e2578_edit_invite_table_pk.py  db1b62d02def_edit_invite_table.py  eee9610b2cdc_role_nullable_and_fk_user_id.py  f189827ee101_user_table_email_verfication.py
apis/: __init__.py  addParticipants.py  authentication.py  caching.py  cats.py  contributor.py  dashboard.py  dashboards.py  dataset.py  dataset_metadata_namespace.py  file.py  getStudies.py  invite_users.py  invited_contributor.py  login.py  participant.py  participants.py  redcap.py  redcap_data_namespace.py  root.py  signup_user.py  study.py  study_metadata_namespace.py  updateStudies.py  user.py  utils.py  utils_namespace.py
apis/dataset_metadata/: dataset_access.py  dataset_alternate_identifier.py  dataset_consent.py  dataset_contributor.py  dataset_date.py  dataset_de_ident_level.py  dataset_description.py  dataset_funder.py  dataset_healthsheet.py  dataset_identifier.py  dataset_managing_organization.py  dataset_other.py  dataset_publisher.py  dataset_readme.py  dataset_record_keys.py  dataset_related_identifier.py  dataset_related_item.py  dataset_related_item_contributor.py  dataset_related_item_identifier.py  dataset_related_item_other.py  dataset_related_item_title.py  dataset_rights.py  dataset_subject.py  dataset_title.py
apis/models/: __init__.py  dashboard.py  fairhubAPI.py  fairhubDashboard.py  fairhubRecruitmentDashboardData.py  fairhubStudyDashboardData.py  redcapData.py  redcapProjectData.py  redcapReportParticipantsData.py  redcapReportRecruitmentData.py  redcapStudyDashboardData.py  studyDashboardData.py
apis/redcap_data/: __init__.py  redcap_project_data.py  redcap_report_participant_values_data.py  redcap_report_participants_data.py  redcap_report_repeat_surveys_data.py  redcap_report_survey_completions_data.py
apis/study_metadata/: study_arm.py  study_available_ipd.py  study_central_contact.py  study_collaborators.py  study_conditions.py  study_contact.py  study_description.py  study_design.py  study_eligibility.py  study_identification.py  study_intervention.py  study_ipdsharing.py  study_keywords.py  study_link.py  study_location.py  study_other.py  study_overall_official.py  study_oversight.py  study_reference.py  study_sponsors.py  study_sponsors_collaborators.py  study_status.py
caching/: __init__.py  cache.py
caching/cachemodel/: __init__.py  dashboard.py  participant.py  redcap.py
config/: dashboards.json  redcap.json  simulation.json  studies.json
core/: __init__.py  config.py  transforms.py  utils.py
dev/: drop_tables.sql
init/: all_tables.sql
invitation/: invitation.py
model/: __init__.py  dashboards.py  dataset.py  datasetVersion.py  datasetVersions.py  dataset_contributor.py  dataset_version.py  dataset_versions.py  email_verification.py  invite.py  invited_study_contributor.py  notification.py  owner.py  participant.py  published_dataset.py  redcapProject.py  session.py  study.py  study_contributor.py  study_dashboard.py  study_redcap.py  study_redcap_project_api.py  study_redcap_project_dashboard.py  token_blacklist.py  user.py  user_details.py  version.py  versionContributor.py  version_Contributor.py  version_contributor.py  version_readme.py
model/cache/: __init__.py  dashboard.py  participant.py  recruitmentDashboard.py  redcapProject.py  redcapStudyDashboardETL.py
model/dataset/: dataset_access.py  dataset_consent.py  dataset_contributor_affiliation.py  dataset_date.py  (+7 more)
modules/: __init__.py
notebooks/: azure-blob.ipynb
sql/: all_tables.sql  init.sql  init_timezones.sql  specific_tables.sql
templates/: accept_general_invitation.html  accept_study_invitation.html  device_notification.html  email_verification.html  invite_contributors.html
tests/: README.md  conftest.py
(+118 files in other folders)
